--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
     }
    ],
    "source": [
-    "restaurant_name(frontier_restaurant): # 'Frontier Restaurant'"
+    "restaurant_name(frontier_restaurant) # 'Frontier Restaurant'"
    ]
   },
   {
