--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,8 @@
     }
    ],
    "source": [
-    "restaurant_name(frontier_restaurant) # 'Frontier Restaurant'"
+    "restaurant_name(frontier_restaurant) # 'Frontier Restaurant'\n",
+    "    pass"
    ]
   },
   {
